Implements rendering of an initial version of an inclusion / exclusion form

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@
 
 # Example .bib file
 example.bib
+
+# Example inclusion / exclusion form generation
+/bin/build_forms
+/out
+
+# ASDF version manager file
+.tool-versions
